--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -20,14 +21,6 @@
   justify-content:space-between;
   max-height:8vh;
   align-items:center;
-  /*background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;*/
 }
 
 .Left-name {
@@ -55,6 +48,10 @@
   color: #61dafb;
 }
 
+.Home-icon {
+  font-size:150%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -63,3 +60,18 @@
     transform: rotate(360deg);
   }
 }
+
+.Link-icon {
+  text-decoration: none;
+  color:black;
+  opacity:0.7
+}
+
+.Link-icon:hover{
+  color:black;
+  opacity:0.95;
+  transition:0.5s;
+}
+
+
+
