--- a/src/Browser/styles.scss
+++ b/src/Browser/styles.scss
@@ -42,3 +42,10 @@ h1 {
 .background {
     background-color: rgb(37, 37, 37);
 }
+.resume {
+    border: solid black;
+    margin:2%;
+}
+.resumeContainer{
+    text-align:center;
+}
