--- a/src/Browser/styles.scss
+++ b/src/Browser/styles.scss
@@ -49,3 +49,20 @@ h1 {
 .resumeContainer{
     text-align:center;
 }
+.card {
+    margin: 5%;
+    margin-left:20%;
+    margin-right:20%;
+    padding-top:1%;
+    padding-bottom:1%;
+    background-color:#0d6efd;
+    color:#0d6efd;
+}
+.bottom {
+    margin-left:30%;
+    margin-right:30%;
+}
+.fullview {
+    height:100vh;
+    width:100vw;
+}
