improved phone UI, offcanvas view for changing screen

--- a/src/Phone/phonestyles.scss
+++ b/src/Phone/phonestyles.scss
@@ -14,3 +14,9 @@
 .phoneCardRow{
     justify-content:center;
 }
+.offcanvasModal {
+    max-width:50% !important;
+    background-color:rgb(175, 175, 175) !important;
+    font-family: 'PT Mono', swap;
+    font-weight: bold;
+}
