--- a/src/Phone/phonestyles.scss
+++ b/src/Phone/phonestyles.scss
@@ -5,7 +5,7 @@
 }
 .resume {
     max-width:80%;
-    height:fit-content;
+    height: auto;
 }
 
 .phoneCard {
@@ -19,4 +19,18 @@
     background-color:rgb(175, 175, 175) !important;
     font-family: 'PT Mono', swap;
     font-weight: bold;
+}
+
+.link {
+    color:black;
+    font-weight: lighter !important;
+    margin-left: 7%;
+}
+
+.offHeader {
+    font-weight: bold !important;
+}
+
+.phoneBrand {
+    color:white !important; 
 }
