--- a/src/Browser/styles.scss
+++ b/src/Browser/styles.scss
@@ -97,5 +97,17 @@ h1 {
 .radioButtons {
     z-index:2800;
     margin:1%;
-    
+    align-self: center;
+}
+
+.optionsWrapper {
+    display:flex;
+}
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
